# bus_network_optimization

./: .gitignore  CMakeLists.txt  README.md
data/GTFS/CARRIS/: calendar.txt  frequencies.txt  lines.txt  routes.txt  shapes.txt  stops.txt  trips.txt
data/GTFS/METRO/: calendar.txt  calendar_dates.txt  frequencies.txt  lines.txt  metro_map.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
data/traffic/: od_synthetic_071019_101019.csv  rawanonymizedsample_071019_101019.csv
include/: README.md
lib/: README.md
scripts/: a_bar_chart.py  a_test.py  build_odx_matrix.py  build_odx_matrix_generated.py  build_odx_matrix_v2.py  compare_odx_matrixes.py  compute_min_maxs.py  compute_weights.py  configs.py  example_geojsons.py  frequencies_single_evolution.py  front.py  generate_network.py  generate_route_pool.py  generate_route_pool_made.py  get_metro_stations.py  get_tazes.py  histograms.py  hypervolume.py  hypervolume_frequencies.py  interface_bus_metro.py  lisbon_bus_frequencies.py  metro_to_json.py  network_to_geojson.py  objective_histograms.py  objective_histograms_frequencies.py  pair_checker.py  route_length_var.py  routes_checker.py  single_objectives.py  stop_ids.py  stops_and_routes.py  test.py  validations_heat.py  walk_calculator.py  walk_to_geojson.py  walking_mode_histogram.py
scripts/tests/: test_yens_algorithm.py
scripts/utils/: general_utils.py  geometric_utils.py  graph_utils.py  json_utils.py
src/: CMakeLists.txt  compare_frequencies_main.cpp  compare_main.cpp  genetic_main.cpp  main.cpp  main_ciara.cpp  main_x.cpp  route_length_main.cpp  times_main.cpp  tndp_main.cpp  tnfsp_main.cpp  urban_main.cpp
src/genetic/: CMakeLists.txt  algorithm.hpp  algorithm.tpp  classic_ga.hpp  classic_ga.tpp  constraint.hpp  cost_function.hpp  genetic_configs.hpp  genetic_configs.tpp  genetic_solution.cpp  genetic_solution.hpp  logger.hpp  logger.tpp  nsga.hpp  nsga.tpp  population.cpp  population.hpp  population.tpp  problem.hpp  problem.tpp  solution.cpp  solution.hpp  solution.tpp  variable.hpp
src/net/: CMakeLists.txt  edge.hpp  edge.tpp  graph.hpp  graph.tpp  heap.hpp  heap.tpp  node.hpp  node.tpp  priority_queue.hpp  priority_queue.tpp
src/osm_net/: CMakeLists.txt  osm_edge.cpp  osm_edge.hpp  osm_net.cpp  osm_net.hpp  osm_net_configs.cpp  osm_net_configs.hpp  osm_node.cpp  osm_node.hpp
src/transit_problem/: CMakeLists.txt  route_pool.cpp  route_pool.hpp  tndp.cpp  tndp.hpp  tndp_configs.cpp  tndp_configs.hpp  tndp_constraints.hpp  tndp_objectives.hpp  tnfsp.cpp  tnfsp.hpp  tnfsp_configs.cpp  tnfsp_configs.hpp  tnfsp_constraints.hpp  tnfsp_objectives.hpp
src/urban/: CMakeLists.txt  bus_edge.cpp  bus_edge.hpp  bus_metro_walks.cpp  bus_metro_walks.hpp  bus_network.cpp  bus_network.hpp  bus_node.cpp  bus_node.hpp  configs.cpp  configs.hpp  frequency_set.cpp  frequency_set.hpp  grid.cpp  grid.hpp  lisbon_bus.cpp  lisbon_bus.hpp  metro_edge.cpp  metro_edge.hpp  metro_network.cpp  metro_network.hpp  metro_node.cpp  metro_node.hpp  network_usage.cpp  network_usage.hpp  odx_matrix.cpp  odx_matrix.hpp  predictor.cpp  predictor.hpp  route.cpp  route.hpp  single_path_report.cpp  single_path_report.hpp  stage.cpp  stage.hpp  trip.cpp  trip.hpp  walking_edge.cpp  walking_edge.hpp  walking_network.cpp  (+3 more)
tests/: CMakeLists.txt
tests/genetic/: genetic_solution_test.cpp  population_test.cpp  solution_test.cpp
tests/net/: graph_test.cpp  heap_test.cpp  priority_queue_test.cpp
tests/urban/: exists_square_test.cpp  odx_matrix_test.cpp  remove_route_test.cpp
